--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ openai:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/productdb
-    username: root
-    password: password
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
 #    snake_case <-> camelCase 매핑이 작동됨
